Add Cost visualisation for potential field

--- a/base_local_planner/CMakeLists.txt
+++ b/base_local_planner/CMakeLists.txt
@@ -110,7 +110,8 @@ add_library(base_local_planner
 	src/trajectory.cpp
 	src/twirling_cost_function.cpp
 	src/voxel_grid_model.cpp
-    src/obstacle_field_cost_function.cpp)
+    src/obstacle_field_cost_function.cpp
+    src/potential_grid_cost_visualizer.cpp)
 add_dependencies(base_local_planner base_local_planner_gencfg)
 add_dependencies(base_local_planner base_local_planner_generate_messages_cpp)
 add_dependencies(base_local_planner nav_msgs_generate_messages_cpp)
