Combine dwa_planner and potential_field planner together, set param to set given planner

--- a/dwa_local_planner/cfg/DWAPlanner.cfg
+++ b/dwa_local_planner/cfg/DWAPlanner.cfg
@@ -38,4 +38,6 @@ gen.add("use_dwa", bool_t, 0, "Use dynamic window approach to constrain sampling
 
 gen.add("restore_defaults", bool_t, 0, "Restore to the original configuration.", False)
 
+gen.add("potential_planner", bool_t, 0, "Use Potential Field Planner", True)
+
 exit(gen.generate("dwa_local_planner", "dwa_local_planner", "DWAPlanner"))
