--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,9 @@
     "python.autoComplete.extraPaths": [
         "/home/piotr/catkin_ws/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/piotr/catkin_ws/devel/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages"
     ]
 }
